--- a/package.json
+++ b/package.json
@@ -12,15 +12,21 @@
     "@glidejs/glide": "^3.6.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/themes": "^3.0.2",
     "@reduxjs/toolkit": "^1.9.7",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
+    "@tanstack/react-table": "^8.16.0",
     "@types/glidejs__glide": "^3.6.4",
     "@types/node": "20.9.2",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
     "framer-motion": "^10.16.5",
@@ -37,6 +43,8 @@
     "react-use": "^17.4.0",
     "react-use-keypress": "^1.3.1",
     "sass": "^1.69.5",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "zustand": "^4.5.2"
   },
