--- a/package.json
+++ b/package.json
@@ -50,9 +50,10 @@
     "jvectormap-next": "^3.1.1",
     "lucide-react": "^0.373.0",
     "next": "^14.0.3",
-    "next-auth": "^4.24.7",
+    "next-auth": "^5.0.0-beta.19",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
+    "pdfkit-next": "^0.11.0",
     "prisma": "^5.13.0",
     "rc-slider": "^10.4.0",
     "react": "18.2.0",
