--- a/package.json
+++ b/package.json
@@ -44,13 +44,16 @@
     "date-fns": "^3.6.0",
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
+    "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "framer-motion": "^10.16.5",
     "isomorphic-unfetch": "^4.0.2",
     "jvectormap-next": "^3.1.1",
     "lucide-react": "^0.373.0",
+    "multer": "^1.4.5-lts.1",
     "next": "^14.0.3",
     "next-auth": "^5.0.0-beta.19",
+    "next-connect": "^1.0.0",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
     "pdfkit-next": "^0.11.0",
