Action button update

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@
 
 # DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 # DATABASE_URL="mysql://root:@localhost:3306/bazaarstall"
-DATABASE_URL="mysql://root:@localhost:3306/mybis"
+DATABASE_URL="mysql://root:@localhost:3306/bazaarstall"
 
 
 DATABASE_URL=your_database_url
