--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
+    "@tanstack/react-query": "^5.59.13",
+    "@tanstack/react-query-devtools": "^5.59.13",
     "@tanstack/react-table": "^8.16.0",
     "@types/glidejs__glide": "^3.6.4",
     "@types/node": "20.9.2",
@@ -65,6 +67,7 @@
     "react-hooks-global-state": "^2.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
+    "react-intersection-observer": "^9.13.1",
     "react-jvectormap": "^0.0.16",
     "react-swipeable": "^7.0.1",
     "react-use": "^17.4.0",
