--- a/package.json
+++ b/package.json
@@ -29,9 +29,13 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
-    "@tanstack/react-query": "^5.59.13",
+    "@tanstack/react-query": "^5.61.0",
     "@tanstack/react-query-devtools": "^5.59.13",
     "@tanstack/react-table": "^8.16.0",
+    "@tiptap/extension-image": "^2.9.1",
+    "@tiptap/extension-table": "^2.9.1",
+    "@tiptap/react": "^2.9.1",
+    "@tiptap/starter-kit": "^2.9.1",
     "@types/glidejs__glide": "^3.6.4",
     "@types/node": "20.9.2",
     "@types/react": "18.2.37",
@@ -65,7 +69,6 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-hooks-global-state": "^2.1.0",
-    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
     "react-intersection-observer": "^9.13.1",
     "react-jvectormap": "^0.0.16",
